# smartspaces

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SPEC.md  at_test.py  capture_boot.py  deep_probe.py  docker-compose.yaml  kincony_control.py  probe_device.py  probe_v2.py  pyproject.toml  universal_physical_space_adapter_spec_pack.md
.github/workflows/: ci.yml
adapters/bacnet/: __init__.py  adapter.py  adapter.yaml
adapters/dnp3/: __init__.py  adapter.py  adapter.yaml
adapters/esphome/: __init__.py  adapter.py  adapter.yaml
adapters/hue/: __init__.py  adapter.py  adapter.yaml
adapters/kincony/: __init__.py  adapter.py  adapter.yaml
adapters/kincony/boards/: kc868_a4.yaml
adapters/kincony/firmware_profiles/: __init__.py  tasmota.py
adapters/kincony/tests/: test_kincony_adapter.py
adapters/knx/: __init__.py  adapter.py  adapter.yaml
adapters/lutron/: __init__.py  adapter.py  adapter.yaml
adapters/matter/: __init__.py  adapter.py  adapter.yaml
adapters/modbus/: __init__.py  adapter.py  adapter.yaml
adapters/mqtt_generic/: __init__.py  adapter.py  adapter.yaml
adapters/onvif/: __init__.py  adapter.py  adapter.yaml
adapters/opcua/: __init__.py  adapter.py  adapter.yaml
adapters/shelly/: __init__.py  adapter.py  adapter.yaml
adapters/zigbee/: __init__.py  adapter.py  adapter.yaml
adapters/zwave/: __init__.py  adapter.py  adapter.yaml
agent/: __init__.py  agent_scheduler.py  analytics.py  client.py  coordination.py  discovery.py  events.py  groups.py  history.py  intent.py  mcp_server.py  safety.py  scenes.py  spaces.py  suggestions.py  tools.py
core/: __init__.py  api.py  engine.py  event_bus.py  event_bus_redis.py  logging_config.py  metrics.py  network_scanner.py  registry.py  scheduler.py  state_store.py
examples/: agent_sdk_usage.py  multi_adapter.py  quick_start.py
fixtures/: kincony_kc868_a4_status0.json  modbus_example_register_map.yaml  scenes_example.yaml  spaces_example.yaml
sdk/adapter_api/: __init__.py  base.py  errors.py  manifest.py  models.py  safety.py
sdk/adapter_api/contract_tests/: test_adapter_contract.py
tests/: test_adapter_contracts.py  test_errors.py  test_manifest.py  test_models.py  test_network_scanner.py  test_observability.py  test_redis_event_bus.py  test_safety.py  test_sprint1.py  test_sprint2.py
tests/agent/: test_advanced.py  test_agent.py
tests/core/: test_api.py  test_engine.py  test_event_bus.py  test_registry.py  test_scheduler.py  test_state_store.py
tests/integration/: test_api_flow.py  test_engine_flow.py
